[package]
name = "normalizer"
version = "0.1.5"
edition = "2021"
description = "Automatic remastering CLI program intended for DJs who play a lot of different genres or older tracks that have inconsistent masters"
license = "MIT"
repository = "https://github.com/eira-fransham/normalizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
tempfile = "3.10"
bs1770 = "1.0"
rodio = { version = "0.19", features = ["symphonia-all"] }
